# Hdnx-Handbook-Bot

./: .gitignore  README.md  Technical Summary.txt  app.py  main.py  pyproject.toml  requirements.txt
data/: Data_Acquisition_processes.md  Handbook_all.md  PM_processes-1.md  PM_processes-2.md  PM_processes.md  handbook_chunks.txt
faiss_index/: index.faiss  index.pkl
