[project]
name = "hdnx-handbook-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter",
    "gradio",
    "langchain",
    "langchain-openai>=0.0.8",
    "faiss-cpu>=1.11.0.post1",
    "rank-bm25>=0.2.2",
    "spacy>=3.8.7",
    "streamlit>=1.48.0",
    "openai>=1.99.1",
    "tiktoken>=0.10.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "typing-extensions>=4.14.1",
]
